// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADD_NAME (Rui Miguel) 1`] = `
Object {
  "list": Array [
    Object {
      "id": 1,
      "name": "Joao",
    },
    Object {
      "id": 2,
      "name": "Sara",
    },
    Object {
      "id": 3,
      "name": "Rui",
    },
    Object {
      "id": 1506534848622,
      "name": "Rui Miguel",
    },
  ],
  "post": null,
}
`;

exports[`INITIAL STATE 1`] = `
Object {
  "list": Array [
    Object {
      "id": 1,
      "name": "Joao",
    },
    Object {
      "id": 2,
      "name": "Sara",
    },
    Object {
      "id": 3,
      "name": "Rui",
    },
  ],
  "post": null,
}
`;

exports[`SUBTRACT_NAME (Rui Miguel) 1`] = `
Object {
  "list": Array [
    Object {
      "id": 1,
      "name": "Joao",
    },
    Object {
      "id": 2,
      "name": "Sara",
    },
    Object {
      "id": 3,
      "name": "Rui",
    },
  ],
  "post": null,
}
`;
